# gutenberg

./: .gitignore  CMakeLists.txt  StaticObject.h  gutenberg.sln  gutenberg.vcxproj  gutenberg.vcxproj.filters  obj_data.txt
resources/objects/ZLO200/: ZLO200.mtl
resources/objects/ball/: ball.mtl  sphere.mtl
resources/objects/ball2/: ball.mtl
resources/objects/block1/: Block1.mtl
resources/objects/block2/: Block2.mtl
resources/objects/block3/: Block3.mtl
resources/objects/block4/: Block4.mtl
resources/objects/block5/: Block5.mtl
resources/objects/block6/: Block6.mtl
resources/objects/block7/: Block7.mtl
resources/objects/block8/: Block8.mtl
resources/objects/clock/: alarm_clock_01_4k.mtl
resources/objects/concav_ground/: concav_ground.mtl
resources/objects/desk_lamp/: desk_lamp.mtl
resources/objects/dom1/: dom1.mtl
resources/objects/dom2/: dom2.mtl
resources/objects/dom3/: dom3.mtl
resources/objects/dom4/: dom4.mtl
resources/objects/dom5/: dom5.mtl
resources/objects/frame/: Frame.mtl
resources/objects/ground/: floor.mtl  sp_old_parquet.mtl  textured_floor.mtl  untitled.mtl
resources/objects/lime/: food_lime_01_4k.mtl
resources/objects/neck_walker/: Neck_Mech_Walker_by_3DHaupt-(Wavefront OBJ).mtl
resources/objects/potted_plant/: potted_plant_04_4k.mtl
resources/objects/rail/: rail.mtl
resources/objects/rounddesk/: round_wooden_table_01_4k.mtl
resources/objects/try3/: try3.mtl
resources/objects/try6/: try6.mtl
resources/objects/try7/: try7.mtl
resources/objects/wm_blade/: blade.mtl
resources/objects/wm_body/: body.mtl  wm_body.mtl
resources/objects/wm_centerpole/: centerpole.mtl
resources/shader/multi_lights/: multi_lights.fs
resources/shader/pbr/: pbr.fs  pbr.vs
resources/textures/hdr/HS-Gold-Room/: Mt Washington Gold Room.ibl
src/: BulletWorld.cpp  BulletWorld.h  CMakeLists.txt  GutenbergScene.cpp  GutenbergScene.h  main.cpp
src/learnopengl/: CMakeLists.txt  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shader_s.h
src/model/: CMakeLists.txt  MovingObject.cpp  MovingObject.h  StaticObject.cpp  StaticObject.h
src/shader/: CMakeLists.txt  MultiLightShader.cpp  MultiLightShader.h  SkyboxShader.cpp  SkyboxShader.h
